--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,6 +8,11 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="15" />
 
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -22,8 +27,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
+        <service android:name="contentprovider.LoadService" />
+        
+    </application>
 
 </manifest>
