--- a/.classpath
+++ b/.classpath
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="gen"/>
-	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.7.0_21"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/caranthir/Documents/workspace21/BakkArbeit/libs/httpmime-4.3.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/caranthir/Documents/workspace21/BakkArbeit/libs/android-support-v4.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/caranthir/Documents/workspace21/BakkArbeit/libs/commons-logging-1.1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/caranthir/Documents/workspace21/BakkArbeit/libs/fluent-hc-4.3.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/caranthir/Documents/workspace21/BakkArbeit/libs/httpclient-cache-4.3.4.jar"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="gen"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/caranthir/Documents/workspace21/BakkArbeit/libs/httpclient-android-4.3.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/caranthir/Documents/workspace21/BakkArbeit/libs/commons-httpclient-3.1_2.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/caranthir/Documents/workspace21/BakkArbeit/libs/commons-httpclient-contrib-ssl-3.1.jar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.7.0_55"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
