--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,6 +12,13 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    
+    
 
     <application
         android:allowBackup="true"
@@ -19,17 +26,47 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="ws13.bakkarbeit.MainActivity"
+            android:name="activities.MainActivity"
             android:label="@string/app_name" >
+        </activity>
+
+        <provider
+            android:name="contentprovider.BContentProvider"
+            android:authorities="BakkArbeit.contentprovider" >
+        </provider>
+
+        <service android:name="services.LoadService" >
+            <intent-filter>
+                <action android:name="android.accounts.AccountAuthenticator" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.accounts.AccountAuthenticator"
+                android:resource="@xml/authenticator" />
+        </service>
+
+        <activity
+            android:name="activities.RegisterActivity"
+            android:label="@string/title_activity_register"
+            android:windowSoftInputMode="adjustResize|stateVisible" >
+        </activity>
+        <activity
+            android:name="activities.AuthenticatorActivity"
+            android:label="@string/title_activity_authenticator"
+            android:windowSoftInputMode="adjustResize|stateVisible" >
+        </activity>
+        <activity
+            android:name="activities.LoginRegisterActivity"
+            android:label="@string/title_activity_login_register" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <service android:name="contentprovider.LoadService" />
-        
+        <activity
+            android:name="activities.PhotosActivity"
+            android:label="@string/title_activity_photos" >
+        </activity>
     </application>
 
 </manifest>
